# finde_die_zeit

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  finde_die_zeit.py  pyproject.toml  renovate.json  requirements.txt  ruff.toml
.github/workflows/: build.yml  ci.yml  conventional-commits.yml  oci-release.yaml  release.yml
chart/: Chart.yaml  README.md  README.md.gotmpl  values.yaml
chart/templates/: hardcoded.yaml
